Fixed rendering of event select on safari

--- a/packages/mm-shared/src/event/eventSelect/SelectedEvent.scss
+++ b/packages/mm-shared/src/event/eventSelect/SelectedEvent.scss
@@ -10,6 +10,7 @@
 
   .SelectedEvent-image {
     width: 60px;
+    height: 60px;
 
     img {
       width: 100%;
